kubernetes/apps/docmost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docmost
  namespace: docmost
  annotations:
    tailscale.com/funnel: "false"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Docmost"
    gethomepage.dev/description: "Wiki & docs"
    gethomepage.dev/group: "Productivity"
    gethomepage.dev/icon: "mdi-file-document-outline"
    gethomepage.dev/href: "https://docmost.<tailnet>.ts.net"
    gethomepage.dev/pod-selector: "app=docmost"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docmost
                port:
                  number: 3000
  tls:
    - hosts:
        - docmost
